# linear-algebra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORRECTNESS_CHECKLIST.md  README.md  justfile  moon.mod  moon.mod.json  ready_to_pr.sh  run_bench.sh  run_test.sh  update_deps.sh
.github/workflows/: benchmark.yml  ci.yml  publish.yml
bench/: README.md  bench_groups.json  clean_up.py  generate_fixtures.py  proc.py  run.py
bench/datasets/: manifest.json
bench/rust_baseline/: Cargo.toml
bench/rust_baseline/benches/: kernel.rs
bench/rust_baseline/src/: main.rs
bench/web/: app.js  index.html  server.py  styles.css
doc/en_US/: README.md  doc_standard.md
doc/ja_JP/: README.md  doc_standard.md
doc/zh_CN/: README.md  doc_standard.md
src/algebra/: algebra_wbtest.mbt  alias.mbt  linear_traits.mbt  moon.pkg  pkg.generated.mbti
src/arithmetic/: alias.mbt  arithmetic_wbtest.mbt  moon.pkg  operation_traits.mbt  pkg.generated.mbti
src/benchmark/: 2d_computing.mbt  2d_tool.mbt  alias.mbt  alias_test.mbt  array1d_computing.mbt  array1d_mat_acc_test.mbt  array1d_mat_det_test.mbt  array1d_mat_inv_test.mbt  array1d_mat_mapi_test.mbt  array1d_mat_mul_test.mbt  array1d_mat_rank_test.mbt  array1d_mat_set_acc_test.mbt  array1d_mat_vec_mul_test.mbt  array1d_vec_dot_test.mbt  array2d_computing.mbt  array2d_mat_acc_test.mbt  array2d_mat_det_test.mbt  array2d_mat_inv_test.mbt  array2d_mat_mapi_test.mbt  array2d_mat_mul_test.mbt  array2d_mat_rank_test.mbt  array2d_mat_set_acc_test.mbt  array2d_mat_vec_mul_test.mbt  array2d_tool.mbt  lib_mat_acc_test.mbt  lib_mat_det_test.mbt  (+26 more)
(+293 files in other folders)
